fix image box size andtext overflow

--- a/static/style.css
+++ b/static/style.css
@@ -303,6 +303,7 @@ button { font: inherit; }
 .attraction-card__media {
   position: relative;
   width: 100%;
+  height: 197px;
   overflow: hidden;
   background: #f3f3f3;
 }
@@ -328,6 +329,8 @@ button { font: inherit; }
   font-weight: 700;
   height: 40px;
   padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .attraction-card__meta {
